--- a/templateProject2.html
+++ b/templateProject2.html
@@ -14,6 +14,7 @@
 </head>
 
 <body data-component="Scrolly">
+  <div data-component="I18n"></div>
   <div class="scroll-wrapper">
     <div data-component="PageTransition" class="page">
       <header class="header" data-component="Header">
@@ -140,6 +141,12 @@
       </section>
     </div>
   </div>
+  <div class="lang-switcher" data-component="LanguageSwitcher">
+        <button class="lang-switcher__btn">FR</button>
+        <div class="lang-switcher__menu">
+            <button class="lang-switcher__item">EN</button>
+        </div>
+    </div>
   <div class="scrollbar" data-component="Scrollbar">
     <span class="scrollbar__thumb"></span>
   </div>
