--- a/templateProject2.html
+++ b/templateProject2.html
@@ -10,13 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script type="module" src="scripts/main.js"></script>
 </head>
 
 <body data-component="Scrolly">
+
   <div data-component="I18n"></div>
   <div class="scroll-wrapper">
     <div data-component="PageTransition" class="page">
+
       <header class="header" data-component="Header">
         <a href="index.html" class="header__brand">
           <img src="assets/images/logo.png" alt="logo_gab" />
@@ -56,97 +60,91 @@
           </div>
         </button>
       </header>
-      <section class="projectStory">
+      <section class="projectStory has-particles">
 
-        <!-- HERO -->
-        <section class="storyHero">
-          <h1 class="storyTitle">Nom du projet</h1>
-          <p class="storySubtitle">
-            Description courte du projet, pitch ou intention.
-          </p>
-        </section>
+        <section class="projectStory projectStoryTech">
 
-        <!-- CHAPTER 1 -->
-        <section class="storyChapter">
-          <div class="chapterText">
-            <h2 data-scrolly='fromBottom'>Le projet</h2>
-            <p data-scrolly='fromBottom'>
-              Présentation du projet, contexte, objectif principal,
-              type de jeu, durée, équipe, etc.
-            </p>
-          </div>
+          <!-- HERO -->
+          <section class="techHero">
+            <div class="heroLeft">
+              <h1 class="heroTitle">Nom du projet</h1>
+              <p class="heroDescription">
+                Jeu expérimental orienté gameplay et systèmes.
+              </p>
 
-          <div class="chapterMedia" data-scrolly='fromBottom'>
-            <div class="videoWrapper">
-              <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" title="Gameplay trailer" loading="lazy"
-                allowfullscreen>
-              </iframe>
+              <ul class="heroMeta">
+                <li>Unreal Engine</li>
+                <li>C++</li>
+                <li>Solo project</li>
+              </ul>
             </div>
-          </div>
-        </section>
 
-        <!-- FULL VIDEO BREAK -->
-        <section class="storyFull">
-          <div class="videoWrapper" data-scrolly='fromBottom'>
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" title="Gameplay showcase" loading="lazy"
-              allowfullscreen>
-            </iframe>
-          </div>
-        </section>
-
-        <!-- CHAPTER 2 -->
-        <section class="storyChapter reverse">
-          <div class="chapterText">
-            <h2 data-scrolly='fromBottom'>Le processus</h2>
-            <p data-scrolly='fromBottom'>
-              Ton workflow, les outils utilisés (Unity, Unreal, Blender),
-              les itérations, les choix techniques.
-            </p>
-          </div>
-
-          <div class="chapterMedia" data-scrolly='fromBottom'>
-            <img src="assets/images/Big.png" alt="Processus de création">
-          </div>
-        </section>
-
-        <!-- CHAPTER 3 -->
-        <section class="storyChapter">
-          <div class="chapterText">
-            <h2 data-scrolly='fromBottom'>Les défis</h2>
-            <p data-scrolly='fromBottom'>
-              Problèmes rencontrés, solutions techniques,
-              apprentissages importants.
-            </p>
-          </div>
-
-          <div class="chapterMedia">
-            <div class="videoWrapper" data-scrolly='fromBottom'>
-              <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" title="Technical challenge" loading="lazy"
-                allowfullscreen>
-              </iframe>
+            <div class="heroRight">
+              <video class="lazyVideo" muted playsinline preload="none" poster="assets/images/Big.png">
+                <source src="assets/videos/BoltPunchGameplayTrailer.mp4" type="video/mp4">
+              </video>
             </div>
-          </div>
+          </section>
+
+          <!-- FEATURES -->
+          <section class="techFeatures">
+            <h2 class="sectionTitle">Systèmes clés</h2>
+
+            <div class="featuresGrid">
+              <article class="featureCard">
+                <h3>Combat system</h3>
+                <p>Système modulaire basé sur des états.</p>
+              </article>
+
+              <article class="featureCard">
+                <h3>Enemy AI</h3>
+                <p>Behavior Tree + perception custom.</p>
+              </article>
+
+              <article class="featureCard">
+                <h3>Time rewind</h3>
+                <p>Mécanique centrale avec conséquences.</p>
+              </article>
+            </div>
+          </section>
+
+          <!-- BREAKDOWN -->
+          <section class="techBreakdown">
+            <div class="breakdownMedia">
+              <img src="assets/images/Medium.png" alt="">
+            </div>
+
+            <div class="breakdownText">
+              <h2>Architecture</h2>
+              <p>
+                Le projet est structuré autour de composants découplés
+                facilitant l’itération rapide.
+              </p>
+            </div>
+          </section>
+
+          <!-- STACK -->
+          <section class="techStack">
+            <h2 class="sectionTitle">Stack</h2>
+
+            <ul class="stackList">
+              <li>C++ Gameplay Framework</li>
+              <li>Blueprints pour itération rapide</li>
+              <li>Custom animation state machine</li>
+              <li>Niagara VFX</li>
+            </ul>
+          </section>
+
         </section>
 
-        <!-- CREDITS -->
-        <section class="storyCredits" data-scrolly='fromBottom'>
-          <h2>Crédits</h2>
-          <ul>
-            <li><strong>Rôle :</strong> Gameplay programmer</li>
-            <li><strong>Moteur :</strong> Unreal Engine</li>
-            <li><strong>Durée :</strong> 3 mois</li>
-            <li><strong>Équipe :</strong> 4 personnes</li>
-          </ul>
-        </section>
-      </section>
     </div>
   </div>
   <div class="lang-switcher" data-component="LanguageSwitcher">
-        <button class="lang-switcher__btn">FR</button>
-        <div class="lang-switcher__menu">
-            <button class="lang-switcher__item">EN</button>
-        </div>
+    <button class="lang-switcher__btn">FR</button>
+    <div class="lang-switcher__menu">
+      <button class="lang-switcher__item">EN</button>
     </div>
+  </div>
   <div class="scrollbar" data-component="Scrollbar">
     <span class="scrollbar__thumb"></span>
   </div>
