Adjusting templateProject2 scss and adding playable video.

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             
             <header class="header" data-component="Header">
                 <a href="index.html" class="header__brand">
-                    <img src="assets/images/logo.png" alt="logo_gab" />
+                    <img class="logo" src="assets/images/logo.png" alt="logo_gab" />
                 </a>
 
                 <nav class="nav-primary">
@@ -113,7 +113,7 @@
                         <p class="projectMeta" data-i18="projects.project1.meta">Beat'em Up <br /> Unreal Engine 5</p>
                         <p class="projectDescription" data-i18="projects.project1.description">Bolt’n’Punch est un
                             jeu...</p>
-                        <a href="templateProject1.html" class="projectButton" data-i18="projects.project1.cta">Voir le
+                        <a href="bolt.html" class="projectButton" data-i18="projects.project1.cta">Voir le
                             projet</a>
                     </article>
                 
