--- a/templateProject2.html
+++ b/templateProject2.html
@@ -23,7 +23,7 @@
 
       <header class="header" data-component="Header">
         <a href="index.html" class="header__brand">
-          <img src="assets/images/logo.png" alt="logo_gab" />
+          <img class="logo" src="assets/images/logo.png" alt="logo_gab" />
         </a>
 
         <nav class="nav-primary">
