--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 
 
 
-            <section class="projects has-particles">
+            <section class="projects">
                 <h2 class="projectsTitle" data-scrolly='fromBottom' data-i18="projects.featuredTitle">Projets vedettes
                 </h2>
 
@@ -222,6 +222,7 @@
 
         </div>
     </div>
+    <div id="particles-bg"></div>
     <div class="lang-switcher" data-component="LanguageSwitcher">
         <button class="lang-switcher__btn">FR</button>
         <div class="lang-switcher__menu">
