--- a/templateProject2.html
+++ b/templateProject2.html
@@ -23,7 +23,7 @@
 
       <header class="header" data-component="Header">
         <a href="index.html" class="header__brand">
-          <img class="logo" src="assets/images/logo.png" alt="logo_gab" />
+          <img class="logo" src="assets/Non-Project/logo.webp" alt="logo_gab" />
         </a>
 
         <nav class="nav-primary">
@@ -67,22 +67,33 @@
           <!-- HERO -->
           <section class="techHero">
             <div class="heroLeft">
-              <h1 class="heroTitle">Nom du projet</h1>
+              <h1 class="heroTitle">TEMPLATE 2</h1>
+
               <p class="heroDescription">
-                Jeu expérimental orienté gameplay et systèmes.
+                Bolt’N’Punch est un jeu d’action à la première personne développé à l’UQAT
+                par une équipe de 25 finissants, publié sur Steam.
               </p>
 
               <ul class="heroMeta">
                 <li>Unreal Engine</li>
-                <li>C++</li>
-                <li>Solo project</li>
+                <li>Blueprints</li>
+                <li>Publié sur Steam</li>
               </ul>
             </div>
 
             <div class="heroRight">
-              <video class="lazyVideo" muted playsinline preload="none" poster="assets/images/Big.png">
-                <source src="assets/videos/BoltPunchGameplayTrailer.mp4" type="video/mp4">
-              </video>
+              <div class="videoContainer" data-component="PlayableVideo">
+
+                <video playsinline preload="metadata" poster="assets/images/Big-Horizontal.png">
+
+                  <source src="assets/Bolt/videos/Bolt'n'PunchGameplayTrailer.mp4" type="video/mp4">
+                </video>
+
+                <button class="playButton" aria-label="Lire la vidéo">
+                  ▶
+                </button>
+
+              </div>
             </div>
           </section>
 
@@ -91,48 +102,111 @@
             <h2 class="sectionTitle">Systèmes clés</h2>
 
             <div class="featuresGrid">
-              <article class="featureCard">
-                <h3>Combat system</h3>
-                <p>Système modulaire basé sur des états.</p>
+
+              <article class="featureCard particleBlocker">
+                <img class="featureImage" src="assets/images/Big.png" alt="">
+                <h3 class="featureTitle">Système de hype</h3>
+
+                <p>
+                  Nous souhaitions encourager l’utilisation des
+                  <strong>attaques spéciales</strong> plutôt que le simple
+                  enchaînement de coups de base.
+                </p>
+
+                <p>
+                  J’ai pris en charge
+                  <strong>l’implémentation complète</strong> de la logique
+                  et l’équilibrage du système.
+                </p>
               </article>
 
-              <article class="featureCard">
-                <h3>Enemy AI</h3>
-                <p>Behavior Tree + perception custom.</p>
+              <article class="featureCard particleBlocker">
+                <img class="featureImage" src="assets/images/Big.png" alt="">
+                <h3 class="featureTitle">Enemy AI</h3>
+
+                <p>
+                  Intelligence basée sur
+                  <strong>Behavior Tree</strong>
+                  et système de perception personnalisé.
+                </p>
               </article>
 
-              <article class="featureCard">
-                <h3>Time rewind</h3>
-                <p>Mécanique centrale avec conséquences.</p>
+              <article class="featureCard particleBlocker">
+                <img class="featureImage" src="assets/images/Big.png" alt="">
+                <h3 class="featureTitle">Time rewind</h3>
+
+                <p>
+                  Mécanique centrale avec
+                  <strong>limites d’utilisation</strong>
+                  et conséquences en jeu.
+                </p>
               </article>
+
             </div>
           </section>
 
-          <!-- BREAKDOWN -->
-          <section class="techBreakdown">
+          <!-- BREAKDOWN : TEMPLATE 1 -->
+          <section class="techBreakdownArticle">
             <div class="breakdownMedia">
-              <img src="assets/images/Medium.png" alt="">
+              <img src="assets/images/Big-Horizontal.png" alt="">
             </div>
 
-            <div class="breakdownText">
-              <h2>Architecture</h2>
+            <div class="breakdownContent">
+              <h2 class="breakdownTitle">Architecture</h2>
+
               <p>
-                Le projet est structuré autour de composants découplés
+                Le projet est structuré autour de
+                <strong>composants découplés</strong>
                 facilitant l’itération rapide.
               </p>
             </div>
           </section>
 
-          <!-- STACK -->
-          <section class="techStack">
-            <h2 class="sectionTitle">Stack</h2>
+          <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
+          <section class="techBreakdownArticle reverse">
+            <div class="breakdownMedia">
+              <img src="assets/images/Big-Horizontal.png" alt="">
+            </div>
 
-            <ul class="stackList">
-              <li>C++ Gameplay Framework</li>
-              <li>Blueprints pour itération rapide</li>
-              <li>Custom animation state machine</li>
-              <li>Niagara VFX</li>
-            </ul>
+            <div class="breakdownContent">
+              <h2 class="breakdownTitle">Défis techniques</h2>
+
+              <p>
+                Optimisation des particules et gestion
+                mémoire pour maintenir un
+                <strong>framerate stable</strong>.
+              </p>
+            </div>
+          </section>
+
+
+          <!-- CREDITS -->
+          <section class="techCredits">
+
+            <div class="creditsGroup">
+              <h3 class="creditsRole">Gestionnaires</h3>
+              <ul class="creditsNames">
+                <li>Xavier Ménard-Beaudoin</li>
+              </ul>
+            </div>
+
+            <div class="creditsGroup">
+              <h3 class="creditsRole">Programmeurs</h3>
+              <ul class="creditsNames">
+                <li>Anthony Legros</li>
+                <li>Aryane Duperron</li>
+                <li>Gabriel Gauthier</li>
+              </ul>
+            </div>
+
+            <div class="creditsGroup">
+              <h3 class="creditsRole">Artistes</h3>
+              <ul class="creditsNames">
+                <li>Nom 1</li>
+                <li>Nom 2</li>
+              </ul>
+            </div>
+
           </section>
 
         </section>
