--- a/bolt.html
+++ b/bolt.html
@@ -61,181 +61,212 @@
         </button>
       </header>
 
-        <section class="projectStory projectStoryTech has-particles">
+      <section class="projectStory projectStoryTech has-particles">
 
-          <!-- HERO -->
-          <section class="techHero">
-            <div class="heroLeft">
-              <h1 class="heroTitle">Bolt'N'Punch</h1>
+        <!-- HERO -->
+        <section class="techHero">
+          <div class="heroLeft">
+            <h1 class="heroTitle">Bolt'N'Punch</h1>
 
-              <p class="heroDescription">
-                Bolt’N’Punch est un jeu d’action à la première personne développé à l’UQAT
-                par une équipe de 25 finissants, publié sur Steam.
-              </p>
+            <p class="heroDescription">
+              Bolt’N’Punch est un jeu d’action à la première personne développé à l’UQAT
+              par une équipe de 25 finissants, publié sur Steam.
+            </p>
 
-              <ul class="heroMeta">
-                <li>Unreal Engine</li>
-                <li>Blueprints</li>
-                <li>Publié sur Steam</li>
-              </ul>
-            </div>
+            <ul class="heroMeta">
+              <li>Unreal Engine</li>
+              <li>Blueprints</li>
+              <li>Publié sur Steam</li>
+            </ul>
+          </div>
 
-            <div class="heroRight">
-              <div class="videoContainer" data-component="PlayableVideo">
+          <div class="heroRight">
+            <div class="videoContainer" data-component="PlayableVideo">
 
-                <video playsinline preload="metadata" poster="assets/Bolt/images/BoltSplashScreen.webp">
+              <video playsinline preload="metadata" poster="assets/Bolt/images/BoltSplashScreen.webp">
 
-                  <source src="assets/Bolt/videos/Bolt'n'PunchGameplayTrailer.mp4" type="video/mp4">
-                </video>
+                <source src="assets/Bolt/videos/Bolt'n'PunchGameplayTrailer.mp4" type="video/mp4">
+              </video>
 
-                <button class="playButton" aria-label="Lire la vidéo">
-                  ▶
-                </button>
-
-              </div>
-            </div>
-          </section>
-
-
-
-          <!-- BREAKDOWN : TEMPLATE 1 -->
-          <section class="techBreakdownArticle">
-            <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
-            </div>
-
-            <div class="breakdownContent">
-              <h2 class="breakdownTitle">Architecture</h2>
-
-              <p>
-                Le projet est structuré autour de
-                <strong>composants découplés</strong>
-                facilitant l’itération rapide.
-              </p>
-            </div>
-          </section>
-          <!-- FEATURES -->
-          <section class="techFeatures">
-            <h2 class="sectionTitle">Systèmes clés</h2>
-
-            <div class="featuresGrid">
-
-              <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Système de hype</h3>
-
-                <p>
-                  Nous souhaitions encourager l’utilisation des
-                  <strong>attaques spéciales</strong> plutôt que le simple
-                  enchaînement de coups de base.
-                </p>
-
-                <p>
-                  J’ai pris en charge
-                  <strong>l’implémentation complète</strong> de la logique
-                  et l’équilibrage du système.
-                </p>
-              </article>
-
-              <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Intégration des sons avec Wwise</h3>
-
-                <p>
-                  Intelligence basée sur
-                  <strong>Behavior Tree</strong>
-                  et système de perception personnalisé.
-                </p>
-              </article>
-
-              <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Baril explosif</h3>
-
-                <p>
-                  Mécanique centrale avec
-                  <strong>limites d’utilisation</strong>
-                  et conséquences en jeu.
-                </p>
-              </article>
-
-              <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Animation blueprint</h3>
-
-                <p>
-                  Mécanique centrale avec
-                  <strong>limites d’utilisation</strong>
-                  et conséquences en jeu.
-                </p>
-              </article>
-              <article class="featureCard particleBlocker">
-                <img class="featureImage" src="assets/images/Big.png" alt="">
-                <h3 class="featureTitle">Boîtes de soins</h3>
-
-                <p>
-                  Mécanique centrale avec
-                  <strong>limites d’utilisation</strong>
-                  et conséquences en jeu.
-                </p>
-              </article>
+              <button class="playButton" aria-label="Lire la vidéo">
+                ▶
+              </button>
 
             </div>
-          </section>
-
-
-          <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
-          <section class="techBreakdownArticle reverse">
-            <div class="breakdownMedia">
-              <img src="assets/images/Big-Horizontal.png" alt="">
-            </div>
-
-            <div class="breakdownContent">
-              <h2 class="breakdownTitle">Défis techniques</h2>
-
-              <p>
-                Optimisation des particules et gestion
-                mémoire pour maintenir un
-                <strong>framerate stable</strong>.
-              </p>
-            </div>
-          </section>
-
-
-          <!-- CREDITS -->
-          <section class="techCredits">
-
-            <div class="creditsGroup">
-              <h3 class="creditsRole">Gestionnaires</h3>
-              <ul class="creditsNames">
-                <li>Xavier Ménard-Beaudoin</li>
-              </ul>
-            </div>
-
-            <div class="creditsGroup">
-              <h3 class="creditsRole">Programmeurs</h3>
-              <ul class="creditsNames">
-                <li>Anthony Legros</li>
-                <li>Aryane Duperron</li>
-                <li>Gabriel Gauthier</li>
-              </ul>
-            </div>
-
-            <div class="creditsGroup">
-              <h3 class="creditsRole">Artistes</h3>
-              <ul class="creditsNames">
-                <li>Nom 1</li>
-                <li>Nom 2</li>
-              </ul>
-            </div>
-
-          </section>
+          </div>
         </section>
+
+
+
+        <!-- BREAKDOWN : TEMPLATE 1 -->
+        <section class="techBreakdownArticle">
+          <div class="breakdownMedia">
+            <img src="assets/Bolt/images/Bolt_Team.webp" alt="Team">
+          </div>
+
+          <div class="breakdownContent">
+            <h2 class="breakdownTitle">Mon rôle</h2>
+
+            <p>
+              J’ai été assigné au rôle de programmeur sur le projet, chargé de concevoir et développer de nouvelles
+              mécaniques ainsi
+              que d’améliorer celles déjà existantes. Chaque mécanique était pensée de manière modulaire, avec des
+              composants que
+              nous pouvions facilement attacher aux objets et aux personnages.
+            </p>
+          </div>
+        </section>
+        <!-- FEATURES -->
+        <section class="techFeatures">
+          <h2 class="sectionTitle">Systèmes clés</h2>
+
+          <div class="featuresGrid">
+
+            <article class="featureCard particleBlocker">
+              <img class="featureImage" src="assets/Bolt/images/Bolt_Hype.webp" alt="">
+              <h3 class="featureTitle">Système de hype</h3>
+
+              <p>
+                Nous souhaitions encourager l’utilisation des
+                <strong>attaques spéciales</strong> plutôt que le simple
+                enchaînement de coups de base.
+              </p>
+
+              <p>
+                J’ai pris en charge
+                <strong>l’implémentation complète</strong> de la logique
+                et l’équilibrage du système.
+              </p>
+            </article>
+
+            <article class="featureCard particleBlocker">
+              <img class="featureImage" src="assets/Bolt/images/Bolt_Sounds.webp" alt="">
+              <h3 class="featureTitle">Intégration des sons avec Wwise</h3>
+
+              <p>
+                J’ai également travaillé sur l’intégration de la plupart des sons du jeu en utilisant Wwise. J’ai appris
+                à placer correctement les sons dans le code et à gérer les événements Wwise, ce qui m’a permis de mieux
+                comprendre leur fonctionnement. Cette tâche, bien que complexe, m’a beaucoup appris. J’ai aussi eu
+                l’occasion de collaborer avec l’Université de Montréal, qui a créé nos sons, une expérience que j’ai
+                grandement appréciée.
+              </p>
+            </article>
+
+            <article class="featureCard particleBlocker">
+              <img class="featureImage" src="assets/Bolt/images/Bolt_ExplosiveBarrel.webp" alt="">
+              <h3 class="featureTitle">Baril explosif</h3>
+
+              <p>
+                J’ai programmé un baril que le joueur peut saisir et lancer. À l’impact, il explose dans une zone qui
+                détecte tous les
+                ennemis, leur infligeant dégâts et recul. J’ai conçu le baril sous forme de component modulaire et
+                ajouté un système
+                de visée, avec une traînée qui prédit la trajectoire du lancer.
+              </p>
+            </article>
+
+            <article class="featureCard particleBlocker">
+              <img class="featureImage" src="assets/Bolt/images/Bolt_AnimationBlueprint.webp" alt="">
+              <h3 class="featureTitle">Animation blueprint</h3>
+
+              <p>
+                J’ai travaillé sur un aspect central du gameplay : l’animation blueprint. Mon rôle consistait à intégrer
+                les animations du personnage et à créer les transitions entre tous ses états (marche, course, saut,
+                coups de poing, attaques chargées, etc.). Cette tâche complexe m’a beaucoup appris, et l’ajout d’alias par la suite ont rendu le système plus lisible et mon travail
+                futur plus efficace.
+              </p>
+            </article>
+            <article class="featureCard particleBlocker">
+              <img class="featureImage" src="assets/Bolt/images/Bolt_HealingCrates.webp" alt="">
+              <h3 class="featureTitle">Boîtes de soins</h3>
+
+              <p>
+                J’ai également conçu un élément central du gameplay : les boîtes de soin. Elles sont destructibles et
+                libèrent des barres énergétiques qui se déplacent automatiquement vers le joueur pour le soigner. J’ai
+                pris plaisir à les développer, et elles jouent un rôle important dans l’équilibre du jeu.
+              </p>
+            </article>
+
+          </div>
+        </section>
+
+
+        <!-- BREAKDOWN : TEMPLATE 2 (reverse) -->
+        <section class="techBreakdownArticle reverse">
+          <div class="breakdownMedia">
+            <img src="assets/Bolt/images/Bolt_MathsProg.webp" alt="">
+          </div>
+
+          <div class="breakdownContent">
+            <h2 class="breakdownTitle">Défis techniques</h2>
+
+            <p>
+              J’ai dû résoudre divers bugs et limitations par moi-même, en utilisant mes connaissances et
+              des calculs mathématiques dans le code, comme des produits croisés ou des pourcentages. Cette approche m’a permis de
+              renforcer mon autonomie et de mieux structurer mes solutions face à des problèmes complexes.
+            </p>
+          </div>
+        </section>
+
+
+        <!-- CREDITS -->
+        <section class="techCredits">
+
+          <div class="creditsGroup">
+            <h3 class="creditsRole">Gestionnaires</h3>
+            <ul class="creditsNames">
+              <li>Xavier Ménard-Beaudoin</li>
+            </ul>
+          </div>
+
+          <div class="creditsGroup">
+            <h3 class="creditsRole">Programmeurs</h3>
+            <ul class="creditsNames">
+              <li>Anthony Legros</li>
+              <li>Aryane Duperron</li>
+              <li>Gabriel Gauthier</li>
+              <li>Émile Paré-Allinger (Technical Director)</li>
+              <li>Maxime Rioux (Lead 3C)</li>
+              <li>Rémi Côté (Lead AI)</li>
+              <li>Clément Roger</li>
+            </ul>
+          </div>
+
+          <div class="creditsGroup">
+            <h3 class="creditsRole">Artistes</h3>
+            <ul class="creditsNames">
+              <li>Ariane Labrie</li>
+              <li>Cedrick Lemaine Romulus</li>
+              <li>Dee-laina Blais</li>
+              <li>Guillaume St-Germain (Art Director)</li>
+              <li>Jérémie Plamondon (Lead Tech Art & Lead Environment Art)</li>
+              <li>Justin Daigle</li>
+              <li>Léa Villeneuve (Lead Character Art)</li>
+              <li>Nathan Flayeux</li>
+              <li>Nicolas Lévesque</li>
+              <li>Thomas Guémon</li>
+            </ul>
+          </div>
+
+          <div class="creditsGroup">
+            <h3 class="creditsRole">Designers</h3>
+            <ul class="creditsNames">
+              <li>Christian Forget (Creative Director)</li>
+              <li>Elodie Vasseur (Lead Level Design)</li>
+              <li>Esteban Gilbert (Lead Narrative Design)</li>
+              <li>Gabriel Anctil</li>
+              <li>Justin Marques</li>
+              <li>Rémi Perreault</li>
+            </ul>
+          </div>
+
+        </section>
+      </section>
     </div>
   </div>
 
   <div id="particles-bg"></div>
-  
+
   <div class="lang-switcher" data-component="LanguageSwitcher">
     <button class="lang-switcher__btn">FR</button>
     <div class="lang-switcher__menu">
